--- a/package.json
+++ b/package.json
@@ -7,18 +7,29 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.1.3",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@tailwindcss/forms": "^0.5.9",
+    "@types/mdx": "^2.0.13",
     "@vercel/postgres": "^0.10.0",
     "autoprefixer": "10.4.20",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.469.0",
     "next": "latest",
     "next-auth": "5.0.0-beta.19",
     "postcss": "8.4.49",
+    "prettier": "^3.4.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-icons": "^5.4.0",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.4.16",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.7.2",
     "use-debounce": "^10.0.4",
     "zod": "^3.23.8"
