--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.469.0",
     "next": "latest",
     "next-auth": "5.0.0-beta.19",
+    "next-mdx-remote": "^5.0.0",
     "postcss": "8.4.49",
     "prettier": "^3.4.2",
     "react": "19.0.0",
@@ -35,6 +36,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "22.10.1",
     "@types/react": "19.0.0",
