--- a/package.json
+++ b/package.json
@@ -1,48 +1,32 @@
 {
+  "name": "dev-tools",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build",
     "dev": "next dev --turbopack",
+    "build": "next build",
     "start": "next start",
-    "autodoc": "npx tsx ./lib/jsonGenerator.ts"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@heroicons/react": "^2.2.0",
-    "@mdx-js/loader": "^3.1.0",
-    "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "^15.1.3",
-    "@radix-ui/react-slot": "^1.1.1",
-    "@radix-ui/react-tooltip": "^1.1.6",
-    "@tailwindcss/forms": "^0.5.9",
-    "@types/mdx": "^2.0.13",
-    "@vercel/postgres": "^0.10.0",
-    "autoprefixer": "10.4.20",
-    "bcrypt": "^5.1.1",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "highlight.js": "^11.11.1",
-    "lucide-react": "^0.469.0",
-    "next": "latest",
-    "next-auth": "5.0.0-beta.19",
-    "next-mdx-remote": "^5.0.0",
-    "postcss": "8.4.49",
-    "prettier": "^3.4.2",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-icons": "^5.4.0",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss": "3.4.16",
-    "tailwindcss-animate": "^1.0.7",
-    "ts-node": "^10.9.2",
-    "typescript": "5.7.2",
-    "use-debounce": "^10.0.4",
-    "zod": "^3.23.8"
+    "@clerk/nextjs": "^6.19.3",
+    "next": "15.3.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.15",
-    "@types/bcrypt": "^5.0.2",
-    "@types/node": "22.10.1",
-    "@types/react": "19.0.0",
-    "@types/react-dom": "19.0.0"
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "15.3.2",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.4.0",
+    "husky": "^9.1.7",
+    "prettier": "^3.5.3",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
